--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             But then came Destiny 2. When Destiny 2 released in September 2017, expectations were high. Bungie promised a fresh start, improved systems, and a more compelling narrative. What players received, however, felt like a streamlined—but stripped-down—version of what Destiny 1 had become.
             Many of the gameplay systems that had been carefully evolved over three years—like weapon random rolls, in-depth subclass customization, and intricate raid mechanics—were either removed or oversimplified in Destiny 2s launch version. For many long-time fans, it felt like a betrayal of what had been built. </p>
     <p><img alt="destiny2" src="images/destiny2.jpeg" /></p>
+<header>
     <table>
         <tr>
             <th>Player Count</th>
@@ -40,6 +41,7 @@
             <td>1.0 Million</td>
             <td>2017</td>
         </tr>
+</header>
 </table>
 </body> 
 </header>     
