--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8"
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
-    <title>Tarik's Blog</title>
+    <title>Gamers Blog</title>
 </head>
 <body>
     <header>
-        <h1>Tarik's Blog</h1>
-        <p>For all things amazing</p>
+        <h1>Gamers Blog</h1>
+        <p>For all things gaming</p>
     </header>
     <nav>
         <ul>
@@ -18,7 +18,7 @@
     </nav>
 </header>
 <section id="blog">
-    <h2>The Greatest Blog In The World</h2>
+    <h2>The Fall of an Incedible Game</h2>
     <article class="blog-post">
         <h3>
         <address class="author"><a rel="author" href="github.com/tarik.campara"   
