--- a/about.html
+++ b/about.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lange="en">
+<head>
+    <meta charset="UTF-8"
+    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <title>Gamers Blog</title>
+</head>
+<body>
+    <header>
+        <h1>Gamers Blog</h1>
+        <p>For all things gaming</p>
+        <nav>
+            <ul> 
+                <li><a href="index.html">home</a></li
+                <li><a href="about.html">about</a></li
+                <li><a href="contact.html">contact</a></li
+            </ul>
+        </nav>
