--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <nav>
             <ul> 
                 <li><a href="index.html">home</a></li
-                <li><a href="about.html">about</a></li
-                <li><a href="contact.html">contact</a></li
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
     </header>
