--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
         <p>For all things gaming</p>
         <nav>
             <ul> 
-                <li><a href="index.html">home</a></li
-                <li><a href="about.html">about</a></li
-                <li><a href="contact.html">contact</a></li
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
