--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p>For all things gaming</p>
         <nav>
             <ul> 
-                <li><a href="index.html">home</a></li
+                <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="contact.html">contact</a></li>
             </ul>
