--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p> When Destiny 1 launched in 2014, it carved out a bold new direction in online shooters, blending MMO elements with tight FPS gameplay. Despite a rocky start and criticism for its fragmented story, the game found its footing through expansions like The Taken King and Rise of Iron, which significantly refined the experience. By 2017, Destiny 1 had built a loyal and passionate player base.
             But then came Destiny 2. When Destiny 2 released in September 2017, expectations were high. Bungie promised a fresh start, improved systems, and a more compelling narrative. What players received, however, felt like a streamlined—but stripped-down—version of what Destiny 1 had become.
             Many of the gameplay systems that had been carefully evolved over three years—like weapon random rolls, in-depth subclass customization, and intricate raid mechanics—were either removed or oversimplified in Destiny 2s launch version. For many long-time fans, it felt like a betrayal of what had been built. </p>
-        <p><img alt="destiny2" src="images/destiny2.jpeg" /></p>
+        <p><img alt="destiny2" src="images/destiny2.jpg" /></p>
     <header>
         <table>
             <tr>
