added to player count

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                 <td>1.0 Million</td>
                 <td>2017</td>
             </tr>
+            <tr>
+                <td>0.95 Million</td>
+                <td>2018</td>
+            </tr>
     </header>
     </table>
 </body> 
