--- a/index.html
+++ b/index.html
@@ -32,18 +32,22 @@
             <tr>
                 <th>Player Count</th>
                 <th>Year</th>
+                <th>Rating</th>
             </tr>
             <tr>
                 <td>1.5 Million</td>
                 <td>2016</td>
+                <td>9.0</td>
             </tr>
             <tr>
                 <td>1.0 Million</td>
                 <td>2017</td>
+                <td>8.7</td>
             </tr>
             <tr>
                 <td>0.95 Million</td>
                 <td>2018</td>
+                <td>7.5</td>
             </tr>
     </header>
     </table>
@@ -60,18 +64,22 @@
             <tr>
                 <th>Player Count</th>
                 <th>Year</th>
+                <th>Rating</th>
             </tr>
             <tr>
                 <td>3 Million</td>
                 <td>2023</td>
+                <td>9.5</td>
             </tr>
             <tr>
                 <td>4 Million</td>
                 <td>2024</td>
+                <td>9.65</td>
             </tr>
             <tr>
                 <td>5 Million</td>
                 <td>2025</td>
+                <td>9.78</td>
             </tr>
     </header>
     </table>
