created about page

--- a/about.html
+++ b/about.html
@@ -16,3 +16,41 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
+    </header>
+    <section>
+       <h2>About Me!</h2>
+        <p>Hello! I am just your normal person who is obssessed with video games, I grew up playing on my PlayStation 3, some of my favorite games include, Uncharted 2, FIFA 12, and PlayStation All-Stars as some of my favorite PS3 games. If i could rank my top 5 games it would go something like this!</p> 
+        <p><img alt="Gaming Person" src="images/persong.jpg" /></p>
+    <header>
+        <table>
+            <tr>
+                <th>Game</th>
+                <th>Console</th>
+                <th>Personal Rating</th>
+            </tr>
+            <tr>
+                <td>Uncharted 2</td>
+                <td>PlayStation 3</td>
+                <td>9.5</td>
+            </tr>
+            <tr>
+                <td>Gears of War</td>
+                <td>Xbox 360</td>
+                <td>9.4</td>
+            </tr>
+            <tr>
+                <td>FIFA 12</td>
+                <td>Playstation 3/Xbox 360</td>
+                <td>9.2</td>
+            </tr> 
+            <tr>
+                <td>Madden 11</td>
+                <td>Playstation 3/Xbox 360</td>
+                <td>9.1</td>
+            </tr>  
+            <tr>
+                <td>Mario Kart</td>
+                <td>Nintendo Wii</td>
+                <td>8.9</td>
+            </tr>       
+    </section>
