first contact draft

--- a/contact.html
+++ b/contact.html
@@ -16,3 +16,14 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
+    <h2> Name: Tarik Campara</h2>
+    <h3>Email: camparat@msu.edu</h3>
+    <h4>Reason for contact</h4>
+        <label for="reason">Choose a reason:</label>
+  <select name="reson">
+    <option value="reason1">Game reccomendation</option>
+    <option value="reason2">Asking a question</option>
+    <option value="reason3">Saying hi</option>
+  </select>
+    <h4><textarea>....</textarea></h4>
+    <h5>Submit</h5>
