--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
-    <h2> Name: Tarik Campara</h2>
-    <h3>Email: camparat@msu.edu</h3>
-    <h4>Reason for contact</h4>
+    <h2> Name:</h2>
+    <h3>Email:</h3>
+    <h4>Reason for contact:</h4>
         <label for="reason">Choose a reason:</label>
   <select name="reson">
     <option value="reason1">Game reccomendation</option>
