--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,15 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
-    <h2> Name:</h2>
-    <h3>Email:</h3>
-    <h4>Reason for contact:</h4>
+    <h2>CONTACT FORM</h2>
+    <h3>Name:</h3>
+    <h4>Email:</h4>
+    <h5>Reason for contact:</h5>
         <label for="reason">Choose a reason:</label>
   <select name="reson">
     <option value="reason1">Game reccomendation</option>
     <option value="reason2">Asking a question</option>
     <option value="reason3">Saying hi</option>
   </select>
-    <h4><textarea>....</textarea></h4>
-    <h5>Submit</h5>
+    <h6><textarea>....</textarea></h6>
+    <button>SUBMIT<button>
