added form newsletter

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
             </tr>
     </header>
     </table>
+    <section>
+        <form>
+            <label>Sign up for my newsletter!:
+                <input type="text">
+            </label>
+            <button>Sign Up!</button>
+        </form>
+    </section>
 </body> 
 </header>     
 </html>
