--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
+        <div class="gamers">
         <h1>Gamers Blog</h1>
+        </div>
         <p>For all things gaming</p>
         <nav>
             <ul> 
