--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class="gamers">
         <h1>Gamers Blog</h1>
         <p>For all things gaming</p>
         <nav>
@@ -17,6 +18,7 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
+        </div>
     <h2>CONTACT FORM</h2>
     <h3>Name:</h3>
     <h4>Email:</h4>
