--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class="gamers">
         <h1>Gamers Blog</h1>
         <p>For all things gaming</p>
         <nav>
@@ -17,6 +18,7 @@
                 <li><a href="contact.html">contact</a></li>
             </ul>
         </nav>
+        </div>
     </header>
     <section id="blog">
         <h2>The Fall of an Incedible Game</h2>
