--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </div> 
     </header>
-    <section id="blog">
+    <section id="blogs">
         <h2>The Fall of an Incedible Game</h2>
         <h3> Author: Tarik Campara, Published JUNE 10 2025</h3>
         <article class="blog-post">
@@ -54,7 +54,7 @@
             </tr>
     </header>
     </table>
- <section id="blog">
+ <section id="blogs">
         <h2>A Revolutionary Game</h2>
         <h3> Author: Tarik Campara, Published JUNE 10 2025</h3>
         <article class="blog-post">
@@ -86,7 +86,7 @@
             </tr>
     </header>
     </table>
-    <section>
+    <section id="newsletter">
         <form>
             <label>Sign up for my newsletter!:
                 <input type="text">
