--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </div> 
     </header>
-    <section id="blogs">
+    <section id="article">
         <h2>The Fall of an Incedible Game</h2>
         <h3> Author: Tarik Campara, Published JUNE 10 2025</h3>
         <article class="blog-post">
@@ -54,7 +54,7 @@
             </tr>
     </header>
     </table>
- <section id="blogs">
+ <section id="article">
         <h2>A Revolutionary Game</h2>
         <h3> Author: Tarik Campara, Published JUNE 10 2025</h3>
         <article class="blog-post">
@@ -86,6 +86,7 @@
             </tr>
     </header>
     </table>
+    <div news>
     <section id="newsletter">
         <form>
             <label>Sign up for my newsletter!:
@@ -94,6 +95,7 @@
             <button>Sign Up!</button>
         </form>
     </section>
+    </div>
 </body> 
 </header>   
 </html>
