--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </nav>
     </div> 
     </header>
+    <article>
     <section id="article">
         <h2>The Fall of an Incedible Game</h2>
         <h3> Author: Tarik Campara, Published JUNE 10 2025</h3>
@@ -84,6 +85,7 @@
                 <td>2025</td>
                 <td>9.78</td>
             </tr>
+    </article>
     </header>
     </table>
     <div news>
