--- a/about.html
+++ b/about.html
@@ -56,3 +56,6 @@
             </tr>      
  <img class="float-image" alt="Gaming Person" src="images/persong.jpg" />
     </section>
+</div>
+</body>
+</html>
