--- a/about.html
+++ b/about.html
@@ -54,7 +54,10 @@
                 <td>Nintendo Wii</td>
                 <td>8.9</td>
             </tr>      
- <img class="float-image" alt="Gaming Person" src="images/persong.jpg" />
+<figure class="float-image">
+    <img alt="Gaming Person" src="images/persong.jpg" />
+    <figcaption>A gamer deep in focus</figcaption>
+</figure>
     </section>
 </div>
 </body>
