--- a/about.html
+++ b/about.html
@@ -54,10 +54,7 @@
                 <td>Nintendo Wii</td>
                 <td>8.9</td>
             </tr>      
-<figure class="float-image">
-    <img alt="Gaming Person" src="images/persong.jpg" />
-    <figcaption>A gamer deep in focus</figcaption>
-</figure>
+<img class="float-image" alt="Gaming Person" src="images/persong.jpg" />
     </section>
 </div>
 </body>
