--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@
     <header>
         <table>
             <tr>
+                <th>Gamer deep in focus</th>
+            </tr>
+            <tr>
                 <th>Game</th>
                 <th>Console</th>
                 <th>Personal Rating</th>
