--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </nav>
     </div> 
     </header>
+<section>
     <article>
     <section id="article">
         <h2>The Fall of an Incedible Game</h2>
@@ -99,5 +100,6 @@
     </section>
     </div>
 </body> 
-</header>   
+</header>  
+</section> 
 </html>
