--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </nav> 
     </div> 
     </header>
-    <aside>
+    <section>
         <p>Hello! I am just your normal person who is obssessed with video games, I grew up playing on my PlayStation 3, some of my favorite games include, Uncharted 2, FIFA 12, and PlayStation All-Stars as some of my favorite PS3 games. Gaming has always been a huge part of my life for as long as i could remember. The PlayStation 3 was my first console and I adored it! Nowadays I frequent my PS5 and have really been enjoying Rainbow 6 Siege, EAFC 25, Ghost of Tsushima and I just recently finished The Witcher 3 which was amazing! If i could rank my top 5 games it would go something like this!</p> 
     <header>
         <table>
@@ -58,7 +58,7 @@
                 <td>8.9</td>
             </tr>  
 <img class="float-image" alt="Gaming Person" src="images/persong.jpg" />
-    </aside>
+    </section>
     </div>
 </body>
 </html>
