--- a/about.html
+++ b/about.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html lange="en">
+<html lang="en">
 <head>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Gamers Blog</title>
 </head>
 <body>
-    <div class="gamers">
-    <header>
-        <h1>Gamers Blog</h1>
+    <header class="gamers">
+        <h1>Gamers Blog</h1> 
         <p>For all things gaming</p>
         <nav>
             <ul> 
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </nav> 
-    </div> 
+        </nav>
     </header>
     <section>
         <p>Hello! I am just your normal person who is obssessed with video games, I grew up playing on my PlayStation 3, some of my favorite games include, Uncharted 2, FIFA 12, and PlayStation All-Stars as some of my favorite PS3 games. Gaming has always been a huge part of my life for as long as i could remember. The PlayStation 3 was my first console and I adored it! Nowadays I frequent my PS5 and have really been enjoying Rainbow 6 Siege, EAFC 25, Ghost of Tsushima and I just recently finished The Witcher 3 which was amazing! If i could rank my top 5 games it would go something like this!</p> 
