--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html lange="en">
+<html lang="en">
 <head>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width", initial-scale="1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Gamers Blog</title>
 </head>
 <body>
-    <header>
-        <div class="gamers">
-        <h1>Gamers Blog</h1>
+    <header class="gamers">
+        <h1>Gamers Blog</h1> 
         <p>For all things gaming</p>
         <nav>
             <ul> 
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        </div> 
+    </header>
     <h2>CONTACT FORM</h2>
     <h3>Name:</h3>
     <h4>Email:</h4>
