--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <title>Gamers Blog</title>
 </head>
 <body>
@@ -18,45 +18,56 @@
             </ul>
         </nav>
     </header>
+
     <section>
-        <p>Hello! I am just your normal person who is obssessed with video games, I grew up playing on my PlayStation 3, some of my favorite games include, Uncharted 2, FIFA 12, and PlayStation All-Stars as some of my favorite PS3 games. Gaming has always been a huge part of my life for as long as i could remember. The PlayStation 3 was my first console and I adored it! Nowadays I frequent my PS5 and have really been enjoying Rainbow 6 Siege, EAFC 25, Ghost of Tsushima and I just recently finished The Witcher 3 which was amazing! If i could rank my top 5 games it would go something like this!</p> 
-    <header>
-        <table>
-            <tr>
-                <th>Gamer deep in focus</th>
-            </tr>
-            <tr>
-                <th>Game</th>
-                <th>Console</th>
-                <th>Personal Rating</th>
-            </tr>
-            <tr>
-                <td>Uncharted 2</td>
-                <td>PlayStation 3</td>
-                <td>9.5</td>
-            </tr>
-            <tr>
-                <td>Gears of War</td>
-                <td>Xbox 360</td>
-                <td>9.4</td>
-            </tr>
-            <tr>
-                <td>FIFA 12</td>
-                <td>Playstation 3/Xbox 360</td>
-                <td>9.2</td>
-            </tr> 
-            <tr>
-                <td>Madden 11</td>
-                <td>Playstation 3/Xbox 360</td>
-                <td>9.1</td>
-            </tr>  
-            <tr>
-                <td>Mario Kart</td>
-                <td>Nintendo Wii</td>
-                <td>8.9</td>
-            </tr>  
-<img class="float-image" alt="Gaming Person" src="images/persong.jpg" />
+        <article class="blog-post">
+            <p>
+                Hello! I am just your normal person who is obsessed with video games. I grew up playing on my PlayStation 3. Some of my favorite games include Uncharted 2, FIFA 12, and PlayStation All-Stars as some of my favorite PS3 games. Gaming has always been a huge part of my life for as long as I can remember. The PlayStation 3 was my first console and I adored it! Nowadays, I frequent my PS5 and have really been enjoying Rainbow 6 Siege, EAFC 25, Ghost of Tsushima, and I just recently finished The Witcher 3 which was amazing! If I could rank my top 5 games, it would go something like this:
+            </p>
+
+            <figure class="float-image">
+                <img src="images/persong.jpg" alt="Gamer deep in focus" />
+            </figure>
+
+            <h2>Gamer Deep in Focus</h2>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Game</th>
+                        <th>Console</th>
+                        <th>Personal Rating</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Uncharted 2</td>
+                        <td>PlayStation 3</td>
+                        <td>9.5</td>
+                    </tr>
+                    <tr>
+                        <td>Gears of War</td>
+                        <td>Xbox 360</td>
+                        <td>9.4</td>
+                    </tr>
+                    <tr>
+                        <td>FIFA 12</td>
+                        <td>PlayStation 3 / Xbox 360</td>
+                        <td>9.2</td>
+                    </tr> 
+                    <tr>
+                        <td>Madden 11</td>
+                        <td>PlayStation 3 / Xbox 360</td>
+                        <td>9.1</td>
+                    </tr>  
+                    <tr>
+                        <td>Mario Kart</td>
+                        <td>Nintendo Wii</td>
+                        <td>8.9</td>
+                    </tr>  
+                </tbody>
+            </table>
+        </article>
     </section>
-    </div>
 </body>
 </html>
